--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,8 +7,13 @@
   </head>
 
   <body>
+  <div>
+    <div><a href="/rock">Rock</a></div>
+    <div><a href="/paper">Paper</a></div>
+    <div><a href="/scissors">Scissors</a></div>
+  </div>
 
     <%= yield %>
-
+    <div><a href="/">Rules</a></div>
   </body>
 </html>
