finished, it works

--- a/views/rules.erb
+++ b/views/rules.erb
@@ -1,6 +1,6 @@
 <!-- /views/rules.erb -->
 
-<h1>Welcome to Rock, Paper, Scissors</h1>
+<h1>Welcome to Rock-Paper-Scissors!</h1>
 	
 <ul>
   <li><a href="/rock"> </a></li>
